MongoDB implementation (#1262)
* MongoDB implementation

* Use latest Serde milestone

* Naming